Fixed searchUI overflow by setting explicit column width proportions for filters and data table. Periodic table components now have responsive widths.

--- a/src/components/periodic-table/periodic-table-component/periodic-table.module.less
+++ b/src/components/periodic-table/periodic-table-component/periodic-table.module.less
@@ -26,8 +26,9 @@
 
 .table-container {
   display: grid;
+  width: 100%;
   &.spaced {
-    grid-template-columns: repeat(18, @element-width-spaced);
+    grid-template-columns: repeat(18, 1fr);
     grid-template-rows: repeat(7, @element-height-spaced) @spacer-spaced repeat(
         2,
         @element-height-spaced
@@ -35,7 +36,7 @@
     grid-gap: @grid-gap-spaced;
   }
   &.compact {
-    grid-template-columns: repeat(18, @element-width-compact);
+    grid-template-columns: repeat(18, 1fr);
     grid-template-rows: repeat(7, @element-height-compact) @spacer-compact repeat(
         2,
         @element-height-compact
@@ -43,7 +44,7 @@
     grid-gap: @grid-gap-compact;
   }
   &.small {
-    grid-template-columns: repeat(18, @element-width-small);
+    grid-template-columns: repeat(18, 1fr);
     grid-template-rows: repeat(7, @element-height-small) @spacer-small repeat(
         2,
         @element-height-small
